# NemulAI

./: .env.example  .gitignore  CITATION.cff  GETTING_STARTED.md  LICENSE  NOTICE  README.md  SECURITY.md  __init__.py  ab.py  agent.py  amd_collector.py  apple_collector.py  baseline.py  benchmark.py  benchmark_m5.py  cli.py  collector.py  command_receiver.py  config.py  dcgm_probe.py  doctor.py  envcompat.py  error_tracker.py  fast_collector.py  fleet_aggregator.py  gaudi_collector.py  install.sh  intel_arc_collector.py  machine_id.py  memory_leak_detector.py  metrics_server.py  optimize.py  pid_smoother.py  pyproject.toml  rapl_collector.py  recommend.py  recommendation_reporter.py  requirements.txt  ring_buffer.py  (+5 more)
attribution/: __init__.py  engine.py  pid_resolver.py  process_probe.py  rules.py
deploy/: alerts.rules.yml  nemulai-agent.env.example  nemulai-agent.service
efficiency/: __init__.py  auto_tuner.py  carbon.py  carbon_scheduler.py  cloud_detect.py  curve_builder.py  gpu_specs.py  hardware_match.py  mig.py  phase_control.py  power_control.py  profiler.py  rapl.py  stats.py
finetune/: __init__.py  dataset_builder.py  energy_callback.py  eval_model.py  greentune.py  greentune_agent.py  greentune_swarm.py  rocm_power.py  smoke_test.py  verify_rocm.py
integrations/: __init__.py  mlflow_callback.py  otel_exporter.py  wandb_callback.py
intelligence/: __init__.py  cli.py  detector.py  estimator.py  pipeline.py  pricing.py  profiler.py  quant_eval.py  quantization.py  registry.py  research.py
learner/: SELF_LEARNING_AGENT.md  __init__.py  bandit.py  cli.py  curves.py  experience_logger.py  feature_encoder.py  reward.py
reports/: chargeback.py
schedulers/: __init__.py  base.py  detect.py  kubernetes.py  runai.py  slurm.py
storage/: tsdb.py
swarm/: __init__.py  fleet_state.py  policies.py  policy_engine.py
tests/: AluminatAI_A100_Test.ipynb  __init__.py  ab_workload.py  baseline.py  benchmark_overhead.py  gpu_stress.py  h100_customer_sim.py  h100_model_benchmark.py  h100_run.sh  h100_setup.sh  monitored.py  multi_workload_attribution.ipynb  multi_workload_attribution.py  powercap_ab_test.py  runpod_demo.py  test_ab.py  test_apple_collector.py  test_attribution.py  test_bandit.py  test_carbon.py  test_collector.py  test_command_receiver.py  test_config_validation.py  test_envcompat.py  test_error_tracker.py  test_experience_logger.py  test_gaudi_collector.py  test_intel_arc_collector.py  test_intelligence.py  test_new_features.py  test_observability.py  test_optimization_engineering.py  test_optimize.py  test_pricing.py  test_quantization.py  (+7 more)
(+1 files in other folders)
